新增：新增SqlExector接口，实现此接口来支持不同数据库类型的持久化操作 新增：Postgresql数据库类型支持 优化：因为postgresql对类型比较敏感，所以现在控制层的id参数修改为实体id的实际类型来接收